Closed Bug 1560326 Opened 5 years ago Closed 5 years ago

gfxUtils::GetRenderRootForFrame assumes frames are from element nodes

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- fixed

People

(Reporter: kats, Assigned: kats)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I got this assertion failure on Windows while investigating bug 1554985:

Assertion failure: IsElement(), at c:/Users/kats/zspace/gecko-misc/obj-x86_64-pc-mingw32/dist/include/mozilla/dom/Element.h:2007
#01: mozilla::layers::`anonymous namespace'::PrepareForSetTargetAPZCNotification (c:\Users\kats\zspace\gecko-misc\gfx\layers\apz\util\APZCCallbackHelper.cpp:0)
#02: mozilla::layers::APZCCallbackHelper::SendSetTargetAPZCNotification (c:\Users\kats\zspace\gecko-misc\gfx\layers\apz\util\APZCCallbackHelper.cpp:0)
#03: nsBaseWidget::ProcessUntransformedAPZEvent (c:\Users\kats\zspace\gecko-misc\widget\nsBaseWidget.cpp:1040)
#04: nsBaseWidget::DispatchInputEvent (c:\Users\kats\zspace\gecko-misc\widget\nsBaseWidget.cpp:1147)
#05: nsWindow::DispatchMouseEvent (c:\Users\kats\zspace\gecko-misc\widget\windows\nsWindow.cpp:4428)
#06: nsWindow::ProcessMessage (c:\Users\kats\zspace\gecko-misc\widget\windows\nsWindow.cpp:0)
#07: nsWindow::WindowProcInternal (c:\Users\kats\zspace\gecko-misc\widget\windows\nsWindow.cpp:4762)
#08: CallWindowProcCrashProtected (c:\Users\kats\zspace\gecko-misc\xpcom\base\nsCrashOnException.cpp:32)
#09: nsWindow::WindowProc (c:\Users\kats\zspace\gecko-misc\widget\windows\nsWindow.cpp:4715)
#10: DispatchMessageW[C:\WINDOWS\System32\user32.dll +0xca66]
#11: DispatchMessageW[C:\WINDOWS\System32\user32.dll +0xc582]
#12: nsAppShell::ProcessNextNativeEvent (c:\Users\kats\zspace\gecko-misc\widget\windows\nsAppShell.cpp:541)
#13: nsBaseAppShell::OnProcessNextEvent (c:\Users\kats\zspace\gecko-misc\widget\nsBaseAppShell.cpp:259)
#14: nsThread::ProcessNextEvent (c:\Users\kats\zspace\gecko-misc\xpcom\threads\nsThread.cpp:1121)
#15: NS_ProcessNextEvent (c:\Users\kats\zspace\gecko-misc\xpcom\threads\nsThreadUtils.cpp:486)
#16: mozilla::ipc::MessagePump::Run (c:\Users\kats\zspace\gecko-misc\ipc\glue\MessagePump.cpp:88)
#17: MessageLoop::RunHandler (c:\Users\kats\zspace\gecko-misc\ipc\chromium\src\base\message_loop.cc:309)
#18: MessageLoop::Run (c:\Users\kats\zspace\gecko-misc\ipc\chromium\src\base\message_loop.cc:291)
#19: nsBaseAppShell::Run (c:\Users\kats\zspace\gecko-misc\widget\nsBaseAppShell.cpp:139)
#20: nsAppShell::Run (c:\Users\kats\zspace\gecko-misc\widget\windows\nsAppShell.cpp:412)
#21: nsAppStartup::Run (c:\Users\kats\zspace\gecko-misc\toolkit\components\startup\nsAppStartup.cpp:277)
#22: XREMain::XRE_mainRun (c:\Users\kats\zspace\gecko-misc\toolkit\xre\nsAppRunner.cpp:4639)
#23: XREMain::XRE_main (c:\Users\kats\zspace\gecko-misc\toolkit\xre\nsAppRunner.cpp:4778)
#24: XRE_main (c:\Users\kats\zspace\gecko-misc\toolkit\xre\nsAppRunner.cpp:4859)
#25: NS_internal_main (c:\Users\kats\zspace\gecko-misc\browser\app\nsBrowserApp.cpp:295)
#26: wmain (c:\Users\kats\zspace\gecko-misc\toolkit\xre\nsWindowsWMain.cpp:131)
#27: __scrt_common_main_seh (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:283)
#28: BaseThreadInitThunk[C:\WINDOWS\System32\KERNEL32.DLL +0x17974]
#29: RtlUserThreadStart[C:\WINDOWS\SYSTEM32\ntdll.dll +0x6a271]
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7364ca476221
Frames might have text nodes as their content so don't assume it's an element. r=dthayer
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: