Bug 1560326 - Frames might have text nodes as their content so don't assume it's an element. r=dthayer

Differential Revision: https://phabricator.services.mozilla.com/D35431